Solve touch issue on mobile screens

--- a/src/App.css
+++ b/src/App.css
@@ -22,3 +22,8 @@ a {
   text-decoration: none;
 }
 
+a, button {
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
+}
+
